# ENG5220-Real-Time-Embedded-Programming_Haptic_Navigation_Vest

./: .gitignore  CMakeLists.txt  README.md
docs/: 01_project_overview.md  02_problem_statement.md  03_requirements.md  04_system_architecture.md  05_hardware_design.md  06_sensor_selection.md  07_realtime_software_design.md  08_algorithms.md  09_testing_plan.md  10_risk_safety_ethics.md  11_demo_script.md  12_progress_log.md  12_progress_log.md   Index.md
include/: AudioController.hpp  BatteryMonitor.hpp  CommonTypes.hpp  EmergencyController.hpp  HapticController.hpp  IMUSensor.hpp  LidarSensor.hpp  NavigationLogic.hpp  PriorityManager.hpp  SensorHealthMonitor.hpp  StartupSelfTest.hpp  SystemAlertController.hpp
scripts/: HARDWARE_TEST_MATRIX.md  README.md  export_hvest_env.sh  hvest_audio.sh  hvest_haptic.sh  hvest_haptic_single.sh  hvest_stop_all.sh  run_hvest_hardware_observe.sh  run_single_hardware_mode.sh
src/: AudioController.cpp  BatteryMonitor.cpp  EmergencyController.cpp  HapticController.cpp  IMUSensor.cpp  LidarSensor.cpp  NavigationLogic.cpp  PriorityManager.cpp  README.md  SensorHealthMonitor.cpp  StartupSelfTest.cpp  main.cpp
src/Lidar/: desc.txt
src/lidar/: desc.txt  lidar_driver.cpp
src/speaker/: desc.txt
